--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ Flask~=3.0.3
 pillow~=10.4.0
 google-generativeai~=0.7.0
 google-api-python-client~=2.139.0
+requests~=2.32.3
+beautifulsoup4~=4.12.3
